[DIAL] Break circular dependency in DialFetchDeviceDescriptionFunction.

DeviceDescriptionFetcher has 2 references (in the 2 calbacks) to the
DialFetchDeviceDescriptionFunction that owns it, but only 1 of the 2
references is removed at the end state. This results in a circular
dependency which prevents the function from being destroyed. This patch
manually destroys the DeviceDescriptionFetcher after the fetching is
done to break the circular dependency.

BUG=688089

Review-Url: https://codereview.chromium.org/2668383004
Cr-Commit-Position: refs/heads/master@{#447857}

Former-commit-id: d8033dadec98c7c2f4c407f89c128b166b5922ef